# internship-scraper

./: .gitignore  .pre-commit-config.yaml  README.md  Readme.md  config.ini  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: business-internships.yml  internships.yml  main.yml  ml-internships.yml  new-grads.yml  phds.yml  research.yml  reset_jobs_table.yaml  thesis.yml
backups/output_backup_20240418022818/: filtered_results.csv
backups/output_backup_20240425035629/: filtered_results.csv  results.csv
backups/output_backup_20240501004051/: filtered_results.csv
backups/output_backup_20240515003851/: filtered_results.csv  results.csv
backups/output_backup_20240522003917/: results.csv
contribute/: contribute_lines.txt  contribute_linkedin.txt
internship_scraper/: __init__.py  constants.py  db.py  filter.py  scraper.py  utils.py
output/: contribute_lines.txt  filtered_results.csv  results.csv  scraped_lines.txt  table.md
output/output-business/: filtered_results.csv  results.csv  table.md
output/output-internships/: filtered_results.csv  results.csv  table.md
output/output-ml/: filtered_results.csv  results.csv  table.md
output/output-new-grads/: filtered_results.csv  results.csv  table.md
output/output-phds/: filtered_results.csv  results.csv  table.md
output/output-research/: filtered_results.csv  results.csv  table.md
output/output-theses/: filtered_results.csv  results.csv  table.md
output_backup_20240420105425/: results.csv
output_backup_20240508044143/: filtered_results.csv  results.csv
output_backup_20240514043848/: results.csv
src/: lines_to_table.py  linkedin_to_lines.py  pipeline.py  scraper.py
src/jobspy/scrapers/indeed/: __init__.py
src/jobspy/scrapers/linkedin/: __init__.py
static/: cities.txt  cities_no_indeed.txt  companies.txt  partial_cities.txt  script.py
